# tlv-streams

./: CMakeLists.txt  README.md
.github/workflows/: Build-Debug-Clang.yml  Build-Debug-GCC.yml  Test-Clang.yml  Test-GCC.yml
cmake/: CompilerFlags.cmake
include/: stream.h  utils.h
src/: CMakeLists.txt  stream.c
tests/: CMakeLists.txt  test_checkpoint.c  test_is_empty.c  test_offset_copy.c  test_ser_string.c  test_skip.c  test_stream_init.c  test_stream_ser.c
